--- a/后台-添加课程.html
+++ b/后台-添加课程.html
@@ -612,7 +612,7 @@
         <img id="u2935_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u2936" class="text" style="visibility: visible;">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';font-weight:700;">2.7 目标踏频：</span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;">点击输入动作目标踏频，只可输入1~150内的值，单位:分/次(必填)</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';font-weight:700;">2.7 目标踏频：</span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;">点击输入动作目标踏频，只可输入1~200内的值，单位:分/次(必填)</span></p>
         </div>
       </div>
 
@@ -621,7 +621,7 @@
         <img id="u2937_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u2938" class="text" style="visibility: visible;">
-          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';font-weight:700;">2.8 把手位置：</span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;">可选择此动作的把手位置，有一把手、二把手、三把手、一二把手交替、一三把手交替、</span></p>
+          <p><span style="font-family:'微软雅黑 Bold', '微软雅黑';font-weight:700;">2.8 把手位置：</span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;">可选择此动作的把手位置，有无把手、一把手、二把手、三把手、一二把手交替、一三把手</span></p>
         </div>
       </div>
 
@@ -630,7 +630,7 @@
         <img id="u2939_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u2940" class="text" style="visibility: visible;">
-          <p><span>二三把手交替、一二三把手交替6种选择，默认选择一把手</span></p>
+          <p><span>交替、二三把手交替、一二三把手交替8种选择，默认选择一把手</span></p>
         </div>
       </div>
 
